# hardshell-telemetry

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/hardshell-integration/: SKILL.md
.github/workflows/: ci.yml
examples/: read_document_access.py  record_retrieval.py  register_documents.py
src/hardshell_telemetry/: __init__.py  _version.py  chunking.py  cli.py  client.py  exceptions.py  ids.py  intake.py  testing.py  types.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_client.py  test_ids.py  test_intake.py  test_live_edge.py  test_testing.py  test_types.py
